--- a/public/style.css
+++ b/public/style.css
@@ -39,8 +39,9 @@ a:hover {
 
 .main-header {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 2fr 1fr;
     margin-bottom: 2em;
+    text-align: right;
 }
 
 .main-header img {
