--- a/web/macros.jinja2
+++ b/web/macros.jinja2
@@ -1,10 +1,11 @@
 {% macro render_header(title, subtitle, patmsg) %}
 <header class="main-header">
     <img src="img/logo.png" alt="logo" class="logo">
+    <div> </div>
     <main>
         <h1>{{ title }}</h1>
         {% if patmsg != None %}
-        <p> {{ patmsg }} <a href="https://github.com/settings/tokens?type=beta"> renew here </a> </p>
+        <p> {{ patmsg }} <a href="https://github.com/settings/tokens?type=beta">create PAT here</a> </p>
         {% endif %}
     </main>
 </header>
