--- a/web/macros.jinja2
+++ b/web/macros.jinja2
@@ -5,7 +5,7 @@
     <main>
         <h1>{{ title }}</h1>
         {% if patmsg != None %}
-        <p> {{ patmsg }} <a href="https://github.com/settings/tokens?type=beta">create PAT here</a> </p>
+        <p> <i> {{ patmsg }} <a href="https://github.com/settings/tokens?type=beta">create PAT here</a> </i> </p>
         {% endif %}
     </main>
 </header>
