--- a/web/page.jinja2
+++ b/web/page.jinja2
@@ -23,6 +23,10 @@
     </section>
 </body>
 
+<footer>
+    <p> Made with ♡ by Utrecht University's <a href="https://cdh.uu.nl/" target="_blank">Centre for Digital Humanities</a> and the <a href="https://odissei-soda.nl" target="_blank">ODISSEI Social Data Science team</a> </p>
+</footer>
+
 </html>
 
 <script>
