--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;600&family=Open+Sans:wght@300;400&display=swap");
 
 body {
-    max-width: 80%;
+    max-width: 85%;
     margin: 0 auto;
     font-family: "Open Sans", sans-serif;
 }
@@ -36,10 +36,15 @@ td > a:hover {
 }
 
 .main-header {
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     margin-bottom: 2em;
     text-align: right;
+}
+
+.main-header > div {
+    flex-grow: 1;
 }
 
 .main-header img {
@@ -54,7 +59,7 @@ td > a:hover {
 
 table {
     border-collapse: collapse;
-    width: 100%;
+    max-width: 100%;
 }
 
 .severity-high {
