prettier responsiveness for table
maintain colours

--- a/public/style.css
+++ b/public/style.css
@@ -60,6 +60,8 @@ td > a:hover {
 table {
     border-collapse: collapse;
     max-width: 100%;
+    overflow-x: auto;
+    display: block;
 }
 
 .severity-high {
