--- a/web/page.jinja2
+++ b/web/page.jinja2
@@ -30,5 +30,5 @@
 </html>
 
 <script>
-    new DataTable('#fair-table', { pageLength: 50, order: [[1, 'desc']], responsive: true});
+    new DataTable('#fair-table', { pageLength: 50, order: [[1, 'desc']]});
 </script>
